--- a/content/resources/5-s16s02-th.md
+++ b/content/resources/5-s16s02-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/5-s16-advanced-kitchen-chemistry-spring-2002/738f2f981eb5d81a62cecd21fc7e3e60_5-s16s02-th.jpg
+file: /courses/5-s16-advanced-kitchen-chemistry-spring-2002/738f2f981eb5d81a62cecd21fc7e3e60_5-s16s02-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A batch of freshly baked peanut butter raisin muffins on a cooling rack.
@@ -14,3 +14,5 @@ resourcetype: Image
 title: 5-s16s02-th.jpg
 uid: 738f2f98-1eb5-d81a-62ce-cd21fc7e3e60
 ---
+New image Upload
+
