--- a/content/resources/5-s16s02.md
+++ b/content/resources/5-s16s02.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A batch of freshly baked peanut butter raisin muffins on a cooling rack.
   (Image courtesy of Aayesha Siddiqui.)
-file: /media/courses/5-s16-advanced-kitchen-chemistry-spring-2002/93d4954d4a67e37febe34aa6740c7115_5-s16s02.jpg
+file: /courses/5-s16-advanced-kitchen-chemistry-spring-2002/93d4954d4a67e37febe34aa6740c7115_5-s16s02.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A batch of freshly baked peanut butter raisin muffins on a cooling rack.
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 5-s16s02.jpg
 uid: 93d4954d-4a67-e37f-ebe3-4aa6740c7115
 ---
+A batch of freshly baked peanut butter raisin muffins on a cooling rack. (Image courtesy of Aayesha Siddiqui.)
+
