--- a/content/resources/5-s16s02-th.md
+++ b/content/resources/5-s16s02-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Peanut butter raisin muffins.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 5-s16s02-th.jpg
 uid: 738f2f98-1eb5-d81a-62ce-cd21fc7e3e60
 ---
 New image Upload
-
