--- a/content/resources/5-s16s02.md
+++ b/content/resources/5-s16s02.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Peanut butter raisin muffins.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 5-s16s02.jpg
 uid: 93d4954d-4a67-e37f-ebe3-4aa6740c7115
 ---
 A batch of freshly baked peanut butter raisin muffins on a cooling rack. (Image courtesy of Aayesha Siddiqui.)
-
